--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
+
   <head>
     <meta charset="UTF-8">
     <title>Мобильное приложение "Pink"</title>
   </head>
+
   <body class="page__body">
 
+    <header class="main-header">
+
+      <a class="main-header__logo" href="#">
+        <img class="main-header__logo-image" src="images/logo-header-mobile.svg" alt="Логотип мобильного приложения Пинк.">
+      </a>
+
+      <nav class="main-nav">
+
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+
+        <div class="main-nav__wrapper">
+
+          <ul class="main-nav__list site-list">
+
+            <li class="site-list__item site-list__item--current">
+              <a>главная</a>
+            </li>
+
+            <li class="site-list__item">
+              <a href="#">Фотографии</a>
+            </li>
+
+            <li class="site-list__item">
+              <a href="#">конкурс</a>
+            </li>
+
+            <li class="site-list__item">
+              <a href="https://htmlacademy.ru/intensive/adaptive">html academy</a>
+            </li>
+
+          </ul>
+        </div>
+      </nav>
+
+    </header>
+
   </body>
+
 </html>
