Исправляет названия классов header

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
       <h1 class="visually-hidden">Мобильное приложение Pink рскрасит серые будни</h1>
 
-      <div class="page-header__apps-wrapper">
+      <div class="page-header__apps apps">
 
-        <div class="page-header__apps apps">
+        <div class="apps__content">
 
           <p class="apps__title">Взгляните на жизнь
             иначе!</p>
