--- a/index.html
+++ b/index.html
@@ -62,15 +62,33 @@
           <ul class="apps__list">
 
             <li class="apps__item">
-              <a class="apps__link" href="https://www.apple.com/ru/app-store/"><span class="visually-hidden">iOS</span></a>
+              <a class="apps__link" href="https://www.apple.com/ru/app-store/">
+                <span class="visually-hidden">iOS</span>
+                <svg width="47" height="56" viewBox="0 0 47 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M39.2 29.7A12.7 12.7 0 0 0 47 41c-1 2.9-2.3 5.6-4 8-2.4 3.4-5 6.8-8.8 7-4 0-5.1-2.3-9.6-2.3-4.4 0-5.8 2.2-9.4 2.3-3.7.1-6.7-3.7-9.1-7.1-5-7-8.8-19.7-3.7-28.2a14.5 14.5 0 0 1 12-7c3.7-.1 7.2 2.4 9.5 2.4s6.6-3 11-2.6a13.8 13.8 0 0 1 10.6 5.6c-.3.2-6.3 3.6-6.2 10.6ZM32 9A12 12 0 0 0 35 0c-3.3.3-6.4 1.8-8.6 4.2-1.8 2.1-3.5 5.5-3 8.7 3.2.2 6.5-1.6 8.5-4" fill="#fff"/>
+                </svg>
+              </a>
             </li>
 
             <li class="apps__item">
-              <a class="apps__link" href="https://play.google.com/store"><span class="visually-hidden">Android</span></a>
+              <a class="apps__link" href="https://play.google.com/store">
+                <span class="visually-hidden">Android</span>
+                <svg width="43" height="47" viewBox="0 0 43 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M34.9 14H8v19.2c0 1 .3 1.8 1 2.5.6.6 1.5 1 2.4 1.1v7.5c0 .7.4 1.4 1 2a3 3 0 0 0 4 0c.5-.6.8-1.3.9-2v-7.5h8.2v7.5c0 .7.4 1.4 1 2a3 3 0 0 0 4 0c.6-.6.9-1.3 1-2v-7.5a3.6 3.6 0 0 0 3.4-3.6V14.4l-.1-.3ZM3 15.7a3 3 0 0 1 2 .9c.6.5.9 1.3.9 2V31a2.8 2.8 0 0 1-.9 2 3 3 0 0 1-2 1 3 3 0 0 1-2.1-1c-.6-.5-.9-1.2-.9-2V18.6a2.8 2.8 0 0 1 .9-2 3 3 0 0 1 2-.9ZM40 15.7a3 3 0 0 1 2.1.9c.6.5.9 1.3.9 2V31a2.8 2.8 0 0 1-.9 2 3 3 0 0 1-2 1 3 3 0 0 1-2.1-1c-.6-.5-.9-1.2-.9-2V18.6a2.8 2.8 0 0 1 .9-2 3 3 0 0 1 2-.9ZM8.2 12h26.5c0-2.7-1.2-5.3-3.2-7.2L34 .5a.3.3 0 0 0 0-.5.3.3 0 0 0-.5.1l-2.4 4.2A16.7 16.7 0 0 0 21.5.9a17 17 0 0 0-9.6 3.4L9.5.2 9.3 0h-.2l-.2.2v.3l2.6 4.2c-2 2-3.3 4.6-3.3 7.4Zm17.7-5.2c0-.3.1-.7.4-1a1.5 1.5 0 0 1 2.2 0 1.5 1.5 0 0 1 0 2.1 1.5 1.5 0 0 1-2.2 0c-.3-.3-.4-.7-.4-1Zm-11.4 0c0-.3.2-.7.4-1a1.5 1.5 0 0 1 2.2 0 1.5 1.5 0 0 1 0 2.1A1.5 1.5 0 0 1 15 8c-.2-.3-.4-.7-.4-1Z" fill="#A4C639"/>
+                </svg>
+              </a>
             </li>
 
             <li class="apps__item">
-              <a class="apps__link" href="https://www.microsoft.com/ru-ru/store/apps/windows-phone"><span class="visually-hidden">Windows</span></a>
+              <a class="apps__link" href="https://www.microsoft.com/ru-ru/store/apps/windows-phone">
+                <span class="visually-hidden">Windows</span>
+                <svg width="44" height="41" viewBox="0 0 44 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M21 19.5H0V0h21v19.5Z" fill="#F05423"/>
+                  <path d="M44 19.5H23V0h21v19.5Z" fill="#84C441"/>
+                  <path d="M21 41H0V21.5h21V41Z" fill="#2DABE2"/>
+                  <path d="M44 41H23V21.5h21V41Z" fill="#F9BC15"/>
+                </svg>
+              </a>
             </li>
 
           </ul>
