--- a/index.html
+++ b/index.html
@@ -48,15 +48,13 @@
 
       </div>
 
-      <h1 class="visually-hidden">Мобильное приложение Pink рскрасит серые будни</h1>
+      <h1 class="visually-hidden">Мобильное приложение Pink раскрасит серые будни</h1>
 
       <div class="page-header__apps apps">
 
         <div class="apps__content">
-
           <p class="apps__title">Взгляните на жизнь
             иначе!</p>
-
           <a class="apps__button" href="https://www.apple.com/ru/app-store/">Скачать приложение</a>
 
           <ul class="apps__list">
@@ -94,7 +92,6 @@
           </ul>
 
           <p class="apps__deskription">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-
         </div>
 
       </div>
@@ -102,6 +99,244 @@
     </header>
 
     <main class="main-container">
+
+      <section class="benefits">
+
+        <div class="benefits__intro intro">
+          <p class="intro__text">Устали от серости мегаполиса?</p>
+          <p class="intro__text">Нам есть, что вам предложить!</p>
+        </div>
+
+        <h2 class="visually-hidden">Преимущества мобильного приложения Pink</h2>
+
+        <div class="benefits__wrapper">
+          <ul class="benefits__list">
+
+            <li class="benefits__item">
+              <h3 class="benefits__title">Поднимает настроение</h3>
+              <p class="benefits__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+            </li>
+
+            <li class="benefits__item">
+              <h3 class="benefits__title">Меняет мир вокруг</h3>
+              <p class="benefits__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+            </li>
+
+            <li class="benefits__item">
+              <h3 class="benefits__title">Заводит новых друзей</h3>
+              <p class="benefits__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+            </li>
+
+          </ul>
+        </div>
+
+      </section>
+
+      <section class="effectiveness">
+
+        <div class="effectiveness__wrapper">
+          <h2 class="effectiveness__title">Эффект на 24 часа!</h2>
+          <p class="effectiveness__description">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+          <a class="effectiveness__link" href="#">Узнать больше об исследовании</a>
+        </div>
+
+      </section>
+
+      <section class="reviews">
+
+        <div class="review__wrapper slider">
+          <h2 class="visually-hidden">Отзывы о мобильном приложении Pink</h2>
+
+          <div class="reviews__list slider__list">
+
+            <blockquote class="reviews__item slider__item">
+              <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              <cite class="reviews__author-name">Николай Петров</cite>
+              <cite class="reviews__author-info">25 лет, водитель трамвая</cite>
+            </blockquote>
+
+            <blockquote class="reviews__item slider__item">
+              <p class="reviews__text">«Хорошее приложение! Отличное развлечение для детей, женщин и котов - пара часов в день блаженной тишины в доме гарантирована!»</p>
+              <cite class="reviews__author-name">Андрей Рублёв</cite>
+              <cite class="reviews__author-info">35 лет, предприниматель</cite>
+            </blockquote>
+
+            <blockquote class="reviews__item slider__item">
+              <p class="reviews__text">«Зачем портить прекрасные снимки розовым фильтром и смайликами? Гламурный бред! Я в ужасе!»</p>
+              <cite class="reviews__author-name">Ансель Адамс</cite>
+              <cite class="reviews__author-info">44 года, фотограф</cite>
+            </blockquote>
+
+            <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+            <button class="reviews__next" type="button">Следующий отзыв</button>
+          </div>
+
+          <p class="reviews__toggles slider__toggles">
+            <button class="slider__toggle slider__toggle--current" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+
+        </div>
+
+      </section>
+
+      <section class="rates">
+
+        <h2 class="visually-hidden">Тарифы</h2>
+
+        <div class="rates__wrapper">
+
+          <table class="rates__table table">
+
+            <thead>
+              <tr class="table__head table-head">
+                <th class="table-head__data"></th>
+                <th class="table-head__cell head-cell">
+                  <span class="table-head__rate">База</span>
+                  <span class="table-head__price">1,99 USD</span>
+                </th>
+                <th class="table-head__cell head-cell head-cell--hit">
+                  <span class="table-head__rate">СТАНДАРТ</span>
+                  <span class="table-head__price">3,99 USD</span>
+                </th>
+                <th class="table-head__cell head-cell">
+                  <span class="table-head__rate">АНЛИМ</span>
+                  <span class="table-head__price">9,99 USD</span>
+                </th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td class="table-body__cell">Розовый фильтр</td>
+                <td class="table-body__cell">
+                  <span class="table-body__value">
+                    <svg width="31" height="21" viewBox="0 0 31 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M30.6.4a1.5 1.5 0 0 0-1.1-.4 1.6 1.6 0 0 0-1.1.4l-18 17.1-7.8-7.4a1.6 1.6 0 0 0-2.2 0c-.2.3-.4.7-.4 1 0 .4.1.8.4 1l8.9 8.5a1.5 1.5 0 0 0 1 .4c.5 0 .9-.2 1.2-.4l19-18.1c.3-.3.5-.7.5-1 0-.4-.2-.8-.4-1Z" fill="#3DC644"/>
+                    </svg>
+                    <span class="visually-hidden">Да</span>
+                  </span>
+                </td>
+                <td class="table-body__cell">
+                  <span class="table-body__value">
+                    <svg width="31" height="21" viewBox="0 0 31 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M30.6.4a1.5 1.5 0 0 0-1.1-.4 1.6 1.6 0 0 0-1.1.4l-18 17.1-7.8-7.4a1.6 1.6 0 0 0-2.2 0c-.2.3-.4.7-.4 1 0 .4.1.8.4 1l8.9 8.5a1.5 1.5 0 0 0 1 .4c.5 0 .9-.2 1.2-.4l19-18.1c.3-.3.5-.7.5-1 0-.4-.2-.8-.4-1Z" fill="#3DC644"/>
+                    </svg>
+                    <span class="visually-hidden">Да</span>
+                  </span>
+                </td>
+                <td class="table-body__cell">
+                  <span class="table-body__value">
+                    <svg width="31" height="21" viewBox="0 0 31 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M30.6.4a1.5 1.5 0 0 0-1.1-.4 1.6 1.6 0 0 0-1.1.4l-18 17.1-7.8-7.4a1.6 1.6 0 0 0-2.2 0c-.2.3-.4.7-.4 1 0 .4.1.8.4 1l8.9 8.5a1.5 1.5 0 0 0 1 .4c.5 0 .9-.2 1.2-.4l19-18.1c.3-.3.5-.7.5-1 0-.4-.2-.8-.4-1Z" fill="#3DC644"/>
+                    </svg>
+                    <span class="visually-hidden">Да</span>
+                  </span>
+                </td>
+              </tr>
+              <tr>
+                <td class="table-body__cell">Смайлики</td>
+                <td class="table-body__cell">
+                  <span class="table-body__value">
+                    <svg width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="m15.6 13.5 11-11A1.5 1.5 0 0 0 25.5 0c-.4 0-.8.2-1 .4l-11 11-11-11A1.5 1.5 0 0 0 0 1.5c0 .4.2.8.4 1l11 11-11 11a1.5 1.5 0 0 0 0 2 1.5 1.5 0 0 0 2.2 0l11-10.9 10.8 11a1.5 1.5 0 0 0 2 .1 1.5 1.5 0 0 0 .2-2.3l-11-10.9Z" fill="#F25B26"/>
+                    </svg>
+                    <span class="visually-hidden">Нет</span>
+                  </span>
+                </td>
+                <td class="table-body__cell">
+                  <span class="table-body__value">
+                    <svg width="31" height="21" viewBox="0 0 31 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M30.6.4a1.5 1.5 0 0 0-1.1-.4 1.6 1.6 0 0 0-1.1.4l-18 17.1-7.8-7.4a1.6 1.6 0 0 0-2.2 0c-.2.3-.4.7-.4 1 0 .4.1.8.4 1l8.9 8.5a1.5 1.5 0 0 0 1 .4c.5 0 .9-.2 1.2-.4l19-18.1c.3-.3.5-.7.5-1 0-.4-.2-.8-.4-1Z" fill="#3DC644"/>
+                    </svg>
+                    <span class="visually-hidden">Да</span>
+                  </span>
+                </td>
+                <td class="table-body__cell">
+                  <span class="table-body__value">
+                    <svg width="31" height="21" viewBox="0 0 31 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M30.6.4a1.5 1.5 0 0 0-1.1-.4 1.6 1.6 0 0 0-1.1.4l-18 17.1-7.8-7.4a1.6 1.6 0 0 0-2.2 0c-.2.3-.4.7-.4 1 0 .4.1.8.4 1l8.9 8.5a1.5 1.5 0 0 0 1 .4c.5 0 .9-.2 1.2-.4l19-18.1c.3-.3.5-.7.5-1 0-.4-.2-.8-.4-1Z" fill="#3DC644"/>
+                    </svg>
+                    <span class="visually-hidden">Да</span>
+                  </span>
+                </td>
+              </tr>
+              <tr>
+                <td class="table-body__cell">Смайлики</td>
+                <td class="table-body__cell">
+                  <span class="table-body__value">
+                    <svg width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="m15.6 13.5 11-11A1.5 1.5 0 0 0 25.5 0c-.4 0-.8.2-1 .4l-11 11-11-11A1.5 1.5 0 0 0 0 1.5c0 .4.2.8.4 1l11 11-11 11a1.5 1.5 0 0 0 0 2 1.5 1.5 0 0 0 2.2 0l11-10.9 10.8 11a1.5 1.5 0 0 0 2 .1 1.5 1.5 0 0 0 .2-2.3l-11-10.9Z" fill="#F25B26"/>
+                    </svg>
+                    <span class="visually-hidden">Нет</span>
+                  </span>
+                </td>
+                <td class="table-body__cell">
+                  <span class="table-body__value">
+                    <svg width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="m15.6 13.5 11-11A1.5 1.5 0 0 0 25.5 0c-.4 0-.8.2-1 .4l-11 11-11-11A1.5 1.5 0 0 0 0 1.5c0 .4.2.8.4 1l11 11-11 11a1.5 1.5 0 0 0 0 2 1.5 1.5 0 0 0 2.2 0l11-10.9 10.8 11a1.5 1.5 0 0 0 2 .1 1.5 1.5 0 0 0 .2-2.3l-11-10.9Z" fill="#F25B26"/>
+                    </svg>
+                    <span class="visually-hidden">Нет</span>
+                  </span>
+                </td>
+                <td class="table-body__cell">
+                  <span class="table-body__value">
+                    <svg width="31" height="21" viewBox="0 0 31 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M30.6.4a1.5 1.5 0 0 0-1.1-.4 1.6 1.6 0 0 0-1.1.4l-18 17.1-7.8-7.4a1.6 1.6 0 0 0-2.2 0c-.2.3-.4.7-.4 1 0 .4.1.8.4 1l8.9 8.5a1.5 1.5 0 0 0 1 .4c.5 0 .9-.2 1.2-.4l19-18.1c.3-.3.5-.7.5-1 0-.4-.2-.8-.4-1Z" fill="#3DC644"/>
+                    </svg>
+                    <span class="visually-hidden">Да</span>
+                  </span>
+                </td>
+              </tr>
+            </tbody>
+
+          </table>
+
+          <p class="rates__toggles slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle slider__toggle--current" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+
+        </div>
+
+      </section>
+
+      <section class="contacts">
+
+        <h2 class="visually-hidden">Контакты</h2>
+        <p class="contacts__title">Остались вопросы? Свяжитесь с нами!</p>
+
+        <dl class="contacts__list">
+
+          <div class="contacts__item contacts__item--phone">
+            <dt class="contacts__item-term">Звоните:</dt>
+            <dd class="contacts__item-description">
+              <a class="contacts__item-link" href="tel:+78125556666">+7 (812) 555-66-66</a>
+            </dd>
+          </div>
+
+          <div class="contacts__item contacts__item--email">
+            <dt class="contacts__item-term">Пишите:</dt>
+            <dd class="contacts__item-description">
+              <a class="contacts__item-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </dd>
+          </div>
+
+          <div class="contacts__item contacts__item--address">
+            <dt class="contacts__item-term">Приезжайте в гости:</dt>
+            <dd class="contacts__item-description">
+              <address class="contacts__item-address">ул. Большая Конюшенная, 19/8</address>
+            </dd>
+          </div>
+
+        </dl>
+
+        <div class="contacts__map map-wrapper">
+
+        </div>
+      </section>
 
     </main>
 
