--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
       <div class="page-header__apps apps">
 
         <div class="apps__content">
-          <p class="apps__title">Взгляните на жизнь
-            иначе!</p>
+          <p class="apps__title">Взгляните на жизнь иначе!</p>
           <a class="apps__button" href="https://www.apple.com/ru/app-store/">Скачать приложение</a>
 
           <ul class="apps__list">
@@ -339,6 +338,69 @@
       </section>
 
     </main>
+
+    <footer class="page-footer">
+
+      <div class="page-footer__content-wrapper content-wrapper">
+
+        <a class="page-footer__logo" href="#">
+          <span class="visually-hidden">Логотип мобильного приложения Pink</span>
+          <svg width="145" height="40" viewBox="0 0 145 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M71 18.5a1.3 1.3 0 0 1 1.3-1.2h7c5.1 0 8.5 2.7 8.5 7v.2c0 4.8-4 7.3-8.8 7.3h-5.5v6.8a1.3 1.3 0 0 1-1.2 1.4 1.3 1.3 0 0 1-1.3-1.4v-20Zm8 11c3.8 0 6.2-2 6.2-5 0-3.2-2.4-4.9-6-4.9h-5.6v9.9H79ZM92.6 18.4a1.3 1.3 0 0 1 1.3-1.4 1.3 1.3 0 0 1 1.2 1.4v20.2A1.3 1.3 0 0 1 94 40a1.3 1.3 0 0 1-1.3-1.4V18.4ZM101.7 18.4a1.3 1.3 0 0 1 1.2-1.2h.4a1.5 1.5 0 0 1 1.3.7l13.6 17.4v-17a1.2 1.2 0 0 1 1.2-1.2 1.2 1.2 0 0 1 1.2 1.3v20.3a1.2 1.2 0 0 1-.3.8 1.1 1.1 0 0 1-.8.3h-.2a1.7 1.7 0 0 1-1.3-.8l-13.9-17.8v17.5a1.3 1.3 0 0 1-1.2 1.2 1.2 1.2 0 0 1-1.2-1.2V18.4ZM127 18.4a1.3 1.3 0 0 1 1.2-1.4 1.3 1.3 0 0 1 1.3 1.4v12.3l12.7-13.1c.3-.3.6-.5 1-.5a1.3 1.3 0 0 1 1.2 1.3 1.3 1.3 0 0 1-.4.9l-8 7.9 8.7 10.5c.2.2.3.6.3 1a1.3 1.3 0 0 1-.4.8 1.3 1.3 0 0 1-1 .4 1.2 1.2 0 0 1-1-.6L134.4 29l-4.8 4.8v4.9a1.3 1.3 0 0 1-.8 1.2 1.3 1.3 0 0 1-1.8-1.2V18.4Z" fill="#283645"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="m53.9 6.6 5 21.1a1.4 1.4 0 0 1-.7 1.7l-.7.2h-4A11.6 11.6 0 0 1 42 39.9c-5.9 0-10.8-4.5-11.5-10.3h-2A11.8 11.8 0 0 1 17 40c-6 0-11-4.6-11.6-10.5h-4A1.4 1.4 0 0 1 .4 29a1.4 1.4 0 0 1-.2-1.3L5 6.6A8 8 0 0 1 13.5 0c.4 0 .7.2 1 .4a1.5 1.5 0 0 1 0 2.1c-.3.3-.6.5-1 .5C8.8 3 8 6.7 8 7L3.3 26.7h2C6.2 20.8 11 16.3 17 16.3c6 0 10.8 4.5 11.6 10.3h2c.7-5.7 5.6-10.2 11.4-10.2 6 0 10.8 4.5 11.5 10.2h2.1L51 7c0-.4-.8-4.1-5.5-4.1-.4 0-.7-.2-1-.5a1.5 1.5 0 0 1 0-2c.3-.3.6-.5 1-.5A8 8 0 0 1 54 6.6Zm-28.2 23a9.1 9.1 0 0 0 0-3 8.9 8.9 0 0 0-8.7-7.4 8.9 8.9 0 0 0-8.7 10.3 8.9 8.9 0 0 0 8.7 7.6c4.4 0 8-3.3 8.7-7.5Zm25 0V28c0-4.8-3.9-8.8-8.7-8.8a8.8 8.8 0 0 0-8.6 10.3A8.7 8.7 0 0 0 42 37c4.4 0 8-3.2 8.6-7.4Z" fill="#D22856"/>
+          </svg>
+        </a>
+
+        <div class="page-footer__social social">
+
+          <ul class="socia__list">
+            <li class="social__item">
+              <a class="social__link social-button" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Мы ВКонтакте</span>
+                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#a)"><path fill-rule="evenodd" clip-rule="evenodd" d="M17.6 4.7c.1-.4 0-.7-.6-.7h-2c-.5 0-.7.3-.8.5 0 0-1 2.4-2.5 4-.4.5-.6.6-.9.6-.1 0-.3-.1-.3-.6V4.7c0-.5-.1-.7-.5-.7H6.9c-.3 0-.5.2-.5.4 0 .5.7.6.7 2v2.8c0 .6 0 .7-.3.7-.7 0-2.3-2.4-3.3-5.1-.2-.6-.4-.8-.9-.8h-2c-.5 0-.6.3-.6.5 0 .6.7 3.1 3.1 6.5 1.6 2.3 4 3.5 6 3.5 1.3 0 1.4-.3 1.4-.8V12c0-.5.1-.7.5-.7.3 0 .8.2 2 1.3 1.3 1.3 1.6 1.9 2.3 1.9h2c.5 0 .8-.3.7-.8-.2-.6-.9-1.4-1.7-2.3-.5-.5-1.2-1-1.4-1.4-.3-.4-.2-.5 0-.8 0 0 2.4-3.4 2.7-4.5Z" fill="#D22856"/>
+                  </g>
+                  <defs>
+                    <clipPath id="a">
+                      <path fill="#fff" d="M0 0h18v18H0z"/>
+                    </clipPath>
+                  </defs>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social-button" href="tg://resolve?domain=htmlacademy">
+                <span class="visually-hidden">Мы в Телеграм</span>
+                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="m16.7 3.2-2.4 11.2c-.2.8-.6 1-1.3.6l-3.6-2.6L7.6 14c-.1.2-.3.4-.7.4l.3-3.7 6.7-6c.3-.3 0-.5-.5-.2L5.1 9.7 1.6 8.6c-.8-.2-.8-.8.1-1.1l14-5.4c.6-.3 1.2.1 1 1.1Z" fill="#D22856"/>
+                </svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social-button" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Мы на YouTube</span>
+                <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M1.8 12.8a1.2 1.2 0 0 1-1.3 0l-.4-.4a1 1 0 0 1 0-.6V.6L.5.2a1.3 1.3 0 0 1 1.3 0l12.4 5.5c1 .4 1 1.2 0 1.6L1.8 12.8Z" fill="#D22856"/>
+                </svg>
+              </a>
+            </li>
+          </ul>
+
+        </div>
+
+        <div class="page-footer__copyright">
+          <span class="page-footer__copyright-text">Разработано</span>
+          <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="visually-hidden">HTML-академия</span>
+            <svg width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13.6 0h-.1L0 1.4V26l13.5 8L27 26V1.4L13.6 0Zm11.6 25-11.7 7-11.7-7V15l11.7 6.8v1.3l-8-4.7v1.2l8 4.8v1.3l-8-4.8v1.2l8 4.9 8.1-4.9V17l3.6-2.1V25Zm0-11.5L22 15.3l-1.5 1-7-4.3v1.2l6 3.6-.2.1-.8.5-5-3v1.3l3.9 2.3-1 .6-3-1.7v1.2l2 1.2-2 1.1-11.6-6.8 11.6-7 11.8 6.9Zm0-1.3L13.4 5.3l-11.6 7V3l11.7-1.2L25.2 3v9.2Z" fill="#D22856"/>
+            </svg>
+          </a>
+        </div>
+
+      </div>
+
+    </footer>
 
   </body>
 
