Добавляет Яндекс-карты

--- a/index.html
+++ b/index.html
@@ -334,7 +334,10 @@
 
         <div class="contacts__map map-wrapper">
 
+          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac90c23b9869659eba078a702b8b4db6935e817cda240a0b9cd12c52b11177ff5&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+
         </div>
+
       </section>
 
     </main>
