Исправляет URL логотипа

--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
       <div class="page-header__nav-wrapper">
 
         <a class="page-header__logo" href="#">
-          <img class="page-header__logo-image" src="images/logo-header-mobile.svg" alt="Логотип мобильного приложения Pink.">
+          <img class="page-header__logo-image" src="img/logo-header-mobile.svg" alt="Логотип мобильного приложения Pink.">
         </a>
 
         <nav class="page-header__main-nav main-nav">
