Добавляет формы + исправляет ошибки

--- a/source/index.html
+++ b/source/index.html
@@ -356,7 +356,7 @@
 
         <div class="page-footer__social social">
 
-          <ul class="socia__list">
+          <ul class="social__list">
             <li class="social__item">
               <a class="social__link social-button" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Мы ВКонтакте</span>
