Добавляет страницу галереи

--- a/source/form.html
+++ b/source/form.html
@@ -46,17 +46,17 @@
 
       </div>
 
-      <div class="page-header__content-wrapper title-wrapper">
+      <div class="page-header__title-wrapper content-wrapper">
         <h1 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
       </div>
 
     </header>
 
-    <main class="page-inner">
+    <main class="main-container">
 
-      <article class="form">
+      <div class="form">
 
-        <div class="form__description-wrap">
+        <div class="form__description-wrapper content-wrapper">
           <p class="form__description">Поделитесь своей историей и получите
           шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
         </div>
@@ -173,7 +173,7 @@
 
         </form>
 
-      </article>
+      </div>
 
     </main>
 
