--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,7 +24,7 @@
             <ul class="main-nav__list site-list">
 
               <li class="site-list__item site-list__item--current">
-                <a>главная</a>
+                <a href="index.html">главная</a>
               </li>
 
               <li class="site-list__item">
@@ -32,7 +32,7 @@
               </li>
 
               <li class="site-list__item">
-                <a href="#">конкурс</a>
+                <a href="form.html">конкурс</a>
               </li>
 
               <li class="site-list__item">
