:heavy_check_mark: Сборка #3

--- a/3/index.html
+++ b/3/index.html
@@ -30,11 +30,11 @@
               </li>
 
               <li class="site-list__item">
-                <a href="#">Фотографии</a>
+                <a href="catalog.html">Фотографии</a>
               </li>
 
               <li class="site-list__item">
-                <a href="#">конкурс</a>
+                <a href="form.html">конкурс</a>
               </li>
 
               <li class="site-list__item">
