--- a/3/catalog.html
+++ b/3/catalog.html
@@ -25,7 +25,7 @@
             <ul class="main-nav__list site-list">
 
               <li class="site-list__item site-list__item--current">
-                <a>главная</a>
+                <a href="index.html">главная</a>
               </li>
 
               <li class="site-list__item">
@@ -33,7 +33,7 @@
               </li>
 
               <li class="site-list__item">
-                <a href="#">конкурс</a>
+                <a href="form.html">конкурс</a>
               </li>
 
               <li class="site-list__item">
