--- a/3/form.html
+++ b/3/form.html
@@ -25,11 +25,11 @@
             <ul class="main-nav__list site-list">
 
               <li class="site-list__item site-list__item--current">
-                <a>главная</a>
+                <a href="index.html">главная</a>
               </li>
 
               <li class="site-list__item">
-                <a href="#">Фотографии</a>
+                <a href="catalog.html">Фотографии</a>
               </li>
 
               <li class="site-list__item">
