--- a/source/catalog.html
+++ b/source/catalog.html
@@ -64,7 +64,7 @@
 
           <h2 class="visually-hidden">Галерея фото пользователей</h2>
 
-          <div class="gallery__item photo--win">
+          <div class="gallery__item photo photo--win">
 
             <a class="photo__link photo__link--win" href="#">
               <img class="photo__image" src="img/gallery/panorama-mobile.jpg" alt="Фотография дня.">
