Исправляет ошибки чекинга-5

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -239,22 +239,20 @@
         </div>
 
         <section class="photo-editor">
-
           <h2 class="visually-hidden">Фоторедактор для загруженных изображений</h2>
 
-					<div class="photo-editor__form-wrapper content-wrapper">
+          <div class="photo-editor__form-wrapper content-wrapper">
 
-						<form class="photo-editor__form form-photo" action="https://echo.htmlacademy.ru/" enctype="multipart/form-data" method="post">
+            <form class="photo-editor__form form-photo" action="https://echo.htmlacademy.ru/" enctype="multipart/form-data" method="post">
 
               <input class="form-photo__input visually-hidden" type="file" id="image" name="image" accept="image/jpeg, image/png, image/gif">
-
               <img src="img/gallery/photo-editor-mobile.jpg" alt="Для редактирования.">
 
               <div class="form-photo__editor editor">
 
                 <div class="editor__buttons-wrapper">
 
-                  <button class="editor__button editor__button--active">
+                  <button class="editor__button editor__button--active" type="button">
                     <span class="visually-hidden">Обрезать фотографию</span>
                     <svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M32 28h4V12a4 4 0 0 0-4-4H16v4h16v16Zm-20 4V0H8v8H0v4h8v20a4 4 0 0 0 4 4h20v8h4v-8h8v-4H12Z" fill="#D22856"/>
@@ -288,18 +286,16 @@
 
               </div>
 
-						  <div class="form-photo__buttons">
-
+              <div class="form-photo__buttons">
                 <button class="form-photo__button button" type="submit">Запостить</button>
-							  <button class="form-photo__button button" type="reset">Отмена</button>
-
+                <button class="form-photo__button button" type="reset">Отмена</button>
               </div>
 
-						</form>
+            </form>
 
-					</div>
+          </div>
 
-				</section>
+        </section>
 
       </div>
 
