--- a/source/index.html
+++ b/source/index.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body class="page__body">
+  <body class="page__body page__body--mobile">
 
-    <header class="page-header">
+    <header class="page-header page-header--mobile page-header--mobile-index">
 
-      <div class="page-header__nav-wrapper">
+      <div class="page-header__nav-wrapper nav-wrapper nav-wrapper--mobile">
 
-        <a class="page-header__logo" href="#">
-          <img class="page-header__logo-image" src="img/logo-header-mobile.svg" alt="Логотип мобильного приложения Pink.">
+        <a class="page-header__logo logo-link" href="#">
+          <span class="visually-hidden">Логотип мобильного приложения Pink</span>
+          <svg class="logo-link__logo"width="74" height="23" viewBox="0 0 74 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M0 1.5A1.3 1.3 0 0 1 1.3.3h7c5.1 0 8.5 2.7 8.5 7v.2c0 4.8-4 7.3-8.8 7.3H2.5v6.8A1.3 1.3 0 0 1 1.3 23 1.3 1.3 0 0 1 0 21.6v-20Zm8 11c3.8 0 6.2-2 6.2-5 0-3.2-2.4-4.9-6-4.9H2.7v9.9H8ZM21.6 1.4A1.3 1.3 0 0 1 22.9 0 1.3 1.3 0 0 1 24 1.4v20.2A1.3 1.3 0 0 1 23 23a1.3 1.3 0 0 1-1.3-1.4V1.4ZM30.7 1.4A1.3 1.3 0 0 1 31.9.2h.4a1.5 1.5 0 0 1 1.3.7l13.6 17.4v-17A1.2 1.2 0 0 1 48.4.2a1.2 1.2 0 0 1 1.2 1.3v20.3a1.1 1.1 0 0 1-1.1 1.1h-.2A1.7 1.7 0 0 1 47 22L33.1 4.2v17.5a1.3 1.3 0 0 1-1.2 1.2 1.2 1.2 0 0 1-1.2-1.2V1.4ZM56 1.4A1.3 1.3 0 0 1 57.1 0a1.3 1.3 0 0 1 1.3 1.4v12.3L71.2.6c.3-.3.6-.5 1-.5a1.3 1.3 0 0 1 1.2 1.3 1.3 1.3 0 0 1-.4.9l-8 7.9 8.7 10.5c.2.2.3.6.3 1a1.3 1.3 0 0 1-1.3 1.2 1.2 1.2 0 0 1-1-.6L63.3 12l-4.8 4.8v4.9a1.3 1.3 0 0 1-1.3 1.3 1.3 1.3 0 0 1-1.3-1.3V1.4Z" fill="##fff"/>
+          </svg>
         </a>
 
         <nav class="page-header__main-nav main-nav">
@@ -51,10 +54,13 @@
 
       <h1 class="visually-hidden">Мобильное приложение Pink раскрасит серые будни</h1>
 
-      <div class="page-header__apps apps">
+      <div class="page-header__title-wrapper page-header__title-wrapper page-header__title-wrapper--mobile">
+        <p class="page-header__title page-header__title--mobile page-header__title--mobile-index">Взгляните на жизнь иначе!</p>
+      </div>
+
+      <div class="page-header__apps apps apps--mobile">
 
         <div class="apps__content">
-          <p class="apps__title">Взгляните на жизнь иначе!</p>
           <a class="apps__button" href="https://www.apple.com/ru/app-store/">Скачать приложение</a>
 
           <ul class="apps__list">
@@ -91,7 +97,7 @@
 
           </ul>
 
-          <p class="apps__deskription">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+          <p class="apps__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
         </div>
 
       </div>
@@ -100,11 +106,11 @@
 
     <main class="main-container">
 
-      <section class="benefits">
+      <section class="benefits benefits--mobile">
 
-        <div class="benefits__intro intro">
-          <p class="intro__text">Устали от серости мегаполиса?</p>
-          <p class="intro__text">Нам есть, что вам предложить!</p>
+        <div class="benefits__intro benefits-intro benefits-intro--mobile">
+          <p class="benefits-intro__text benefits-intro__text--mobile">Устали от серости мегаполиса?</p>
+          <p class="benefits-intro__text benefits-intro__text--mobile">Нам есть, что вам предложить!</p>
         </div>
 
         <h2 class="visually-hidden">Преимущества мобильного приложения Pink</h2>
