--- a/source/catalog.html
+++ b/source/catalog.html
@@ -305,9 +305,9 @@
 
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer page-footer--mobile">
 
-      <div class="page-footer__content-wrapper content-wrapper">
+      <div class="page-footer__content-wrapper page-footer__content-wrapper--mobile">
 
         <a class="page-footer__logo" href="#">
           <span class="visually-hidden">Логотип мобильного приложения Pink</span>
@@ -321,9 +321,9 @@
 
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social-button" href="https://vk.com/htmlacademy">
+              <a class="social__link button button--social" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Мы ВКонтакте</span>
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="social__icon social__icon--vk" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#a)"><path fill-rule="evenodd" clip-rule="evenodd" d="M17.6 4.7c.1-.4 0-.7-.6-.7h-2c-.5 0-.7.3-.8.5 0 0-1 2.4-2.5 4-.4.5-.6.6-.9.6-.1 0-.3-.1-.3-.6V4.7c0-.5-.1-.7-.5-.7H6.9c-.3 0-.5.2-.5.4 0 .5.7.6.7 2v2.8c0 .6 0 .7-.3.7-.7 0-2.3-2.4-3.3-5.1-.2-.6-.4-.8-.9-.8h-2c-.5 0-.6.3-.6.5 0 .6.7 3.1 3.1 6.5 1.6 2.3 4 3.5 6 3.5 1.3 0 1.4-.3 1.4-.8V12c0-.5.1-.7.5-.7.3 0 .8.2 2 1.3 1.3 1.3 1.6 1.9 2.3 1.9h2c.5 0 .8-.3.7-.8-.2-.6-.9-1.4-1.7-2.3-.5-.5-1.2-1-1.4-1.4-.3-.4-.2-.5 0-.8 0 0 2.4-3.4 2.7-4.5Z" fill="#D22856"/>
                   </g>
                   <defs>
@@ -335,17 +335,17 @@
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social-button" href="tg://resolve?domain=htmlacademy">
+              <a class="social__link button button--social" href="tg://resolve?domain=htmlacademy">
                 <span class="visually-hidden">Мы в Телеграм</span>
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="social__icon social__icon--telegram" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m16.7 3.2-2.4 11.2c-.2.8-.6 1-1.3.6l-3.6-2.6L7.6 14c-.1.2-.3.4-.7.4l.3-3.7 6.7-6c.3-.3 0-.5-.5-.2L5.1 9.7 1.6 8.6c-.8-.2-.8-.8.1-1.1l14-5.4c.6-.3 1.2.1 1 1.1Z" fill="#D22856"/>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social-button" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="social__link button button--social" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Мы на YouTube</span>
-                <svg width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="social__icon social__icon--youtube" width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M1.8 12.8a1.2 1.2 0 0 1-1.3 0l-.4-.4a1 1 0 0 1 0-.6V.6L.5.2a1.3 1.3 0 0 1 1.3 0l12.4 5.5c1 .4 1 1.2 0 1.6L1.8 12.8Z" fill="#D22856"/>
                 </svg>
               </a>
@@ -354,7 +354,7 @@
 
         </div>
 
-        <div class="page-footer__copyright">
+        <div class="page-footer__copyright page-footer__copyright--mobile">
           <span class="page-footer__copyright-text">Разработано</span>
           <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
             <span class="visually-hidden">HTML-академия</span>
