Добавляет стилизацию main form

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -94,7 +94,7 @@
 
           </div>
 
-          <ul class="gallery__list">
+          <ul class="gallery__list site-list">
 
             <li class="gallery__item photo">
 
@@ -319,7 +319,7 @@
 
         <div class="page-footer__social social">
 
-          <ul class="social__list">
+          <ul class="social__list site-list">
             <li class="social__item">
               <a class="social__link button button--social" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Мы ВКонтакте</span>
