--- a/source/form.html
+++ b/source/form.html
@@ -60,119 +60,129 @@
 
       <div class="form">
 
-        <div class="form__description-wrapper content-wrapper">
-          <p class="form__description">Поделитесь своей историей и получите
+        <div class="form__description-wrapper form__description-wrapper--mobile content-wrapper">
+          <p class="form__description form__description--mobile">Поделитесь своей историей и получите
           шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
         </div>
 
-        <form class="form__request request" action="https://echo.htmlacademy.ru/" method="post">
+        <form class="form__request" action="https://echo.htmlacademy.ru/" method="post">
 
-          <fieldset class="request__fieldset contestant text-fields">
+          <div class="form__fieldset-wrapper form__fieldset-wrapper--mobile-light">
+          <fieldset class="form__fieldset form__fieldset--mobile contestant contestant--mobile text-fields">
 
-            <ul class="contestant__list">
-              <li class="contestant__item">
-                <label class="contestant__label" for="last-name">ФАМИЛИЯ:</label>
-                <input class="contestant__input" type="text" id="last-name" name="last-name" placeholder="Укажите фамилию *" required>
+            <ul class="contestant__list contestant__list--mobile site-list">
+              <li class="contestant__item contestant__item--mobile">
+                <label class="contestant__label form-label form-label--mobile" for="last-name">ФАМИЛИЯ:</label>
+                <input class="contestant__input form-input" type="text" id="last-name" name="last-name" placeholder="Укажите фамилию *" required>
               </li>
 
-              <li class="contestant__item">
-                <label class="contestant__label" for="first-name">ИМЯ:</label>
-                <input class="contestant__input" type="text" id="first-name" name="first-name" placeholder="Введите ваше имя *" required>
+              <li class="contestant__item contestant__item--mobile">
+                <label class="contestant__label form-label form-label--mobile" for="first-name">ИМЯ:</label>
+                <input class="contestant__input form-input" type="text" id="first-name" name="first-name" placeholder="Введите ваше имя *" required>
               </li>
 
-              <li class="contestant__item">
-                <label class="contestant__label" for="father-name">ОТЧЕСТВО:</label>
-                <input class="contestant__input" type="text" id="father-name" name="father-name" placeholder="Ну и отчество тоже">
+              <li class="contestant__item contestant__item--mobile">
+                <label class="contestant__label form-label form-label--mobile" for="father-name">ОТЧЕСТВО:</label>
+                <input class="contestant__input form-input" type="text" id="father-name" name="father-name" placeholder="Ну и отчество тоже">
               </li>
             </ul>
 
           </fieldset>
+          </div>
 
-          <fieldset class="request__fieldset achievements check-fields">
-            <legend>Ваши безбашенные достижения в путешествии</legend>
+          <div class="form__fieldset-wrapper form__fieldset-wrapper--mobile-checks">
+          <fieldset class="form__fieldset form__fieldset--mobile achievements check-fields">
+            <legend class="form-legend">Ваши безбашенные<br>достижения в путешествии</legend>
 
-            <ul class="achievements__list">
+            <ul class="achievements__list site-list">
               <li class="achievements__item">
                 <input class="achievements__input visually-hidden" type="checkbox" id="selfie" name="shark-selfie" checked>
-                <label class="achievements__label" for="selfie">Сделал селфи с акулой</label>
+                <label class="achievements__label check-label" for="selfie">Сделал селфи с акулой</label>
               </li>
 
               <li class="achievements__item">
                 <input class="achievements__input visually-hidden" type="checkbox" id="burned" name="beach-burned" checked>
-                <label class="achievements__label" for="burned">Обгорел на пляже</label>
+                <label class="achievements__label check-label" for="burned">Обгорел на пляже</label>
               </li>
 
               <li class="achievements__item">
                 <input class="achievements__input visually-hidden" type="checkbox" id="norris" name="meet-norris">
-                <label class="achievements__label" for="norris">Видел Чака Норриса</label>
+                <label class="achievements__label check-label" for="norris">Видел Чака Норриса</label>
               </li>
 
               <li class="achievements__item">
                 <input class="achievements__input visually-hidden" type="checkbox" id="souvenirs" name="get-souvenirs">
-                <label class="achievements__label" for="souvenirs">Накупил сувениров</label>
+                <label class="achievements__label check-label" for="souvenirs">Накупил сувениров</label>
               </li>
 
               <li class="achievements__item">
                 <input class="achievements__input visually-hidden" type="checkbox" id="tower" name="hold-tower" checked>
-                <label class="achievements__label" for="tower">Удержал башню</label>
+                <label class="achievements__label check-label" for="tower">Удержал башню</label>
               </li>
 
               <li class="achievements__item">
                 <input class="achievements__input visually-hidden" type="checkbox" id="pogrom" name="hotel-pogrom">
-                <label class="achievements__label" for="pogrom">Разгромил отель</label>
+                <label class="achievements__label check-label" for="pogrom">Разгромил отель</label>
               </li>
             </ul>
 
           </fieldset>
+          </div>
 
-          <fieldset class="request__fieldset contacts text-fields">
+          <div class="form__fieldset-wrapper form__fieldset-wrapper--mobile-light">
+          <fieldset class="form__fieldset form__fieldset--mobile user-contacts text-fields">
 
-            <ul class="contacts__list">
-              <li class="contacts__item">
-                <label class="contacts__label" for="phone">НОМЕР ТЕЛЕФОНА</label>
-                <input class="contacts__input" type="tel" id="phone" name="phone" placeholder="Номер, пожалуйста">
+            <ul class="user-contacts__list user-contacts__list--mobile site-list">
+              <li class="user-contacts__item user-contacts__item--mobile">
+                <label class="user-contacts__label form-label form-label--mobile" for="phone">НОМЕР ТЕЛЕФОНА</label>
+                <input class="user-contacts__input user-contacts__input--mobile form-input" type="tel" id="phone" name="phone" placeholder="Номер, пожалуйста">
               </li>
 
-              <li class="contacts__item">
-                <label class="contacts__label" for="email">АДРЕС ПОЧТЫ</label>
-                <input class="contacts__input" type="email" id="email" name="email" placeholder="Введите почту *" required>
-              </li>
-            </ul>
-
-          </fieldset>
-
-          <fieldset class="request__fieldset apps check-fields">
-            <legend>С каким приложением путешествовали?</legend>
-
-            <ul class="apps__list">
-              <li class="apps__item">
-                <input class="apps__input visually-hidden" type="radio" id="ios" name="apps" value="ios" checked>
-                <label class="apps__label" for="ios">Pink для iOS</label>
-              </li>
-
-              <li class="apps__item">
-                <input class="apps__input visually-hidden" type="radio" id="android" name="apps" value="android">
-                <label class="apps__label" for="android">Pink на Android</label>
-              </li>
-
-              <li class="apps__item">
-                <input class="apps__input visually-hidden" type="radio" id="windows" name="apps" value="windows-phone">
-                <label class="apps__label" for="windows">Windows Phone</label>
+              <li class="user-contacts__item user-contacts__item--mobile">
+                <label class="user-contacts__label form-label form-label--mobile" for="email">АДРЕС ПОЧТЫ</label>
+                <input class="user-contacts__input user-contacts__input--mobile form-input" type="email" id="email" name="email" placeholder="Введите почту *" required>
               </li>
             </ul>
 
           </fieldset>
+          </div>
 
-          <fieldset class="request__fieldset story check-fields">
-            <div class="story__item">
-              <label class="story__label" for="emotions">ОПИШИТЕ СВОИ ЭМОЦИИ</label>
-              <textarea class="story__input" id="emotions" name="emotional-story" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+          <div class="form__fieldset-wrapper form__fieldset-wrapper--mobile-checks">
+          <fieldset class="form__fieldset form__fieldset--mobile platform check-fields">
+            <legend class="form-legend">С каким приложением путешествовали?</legend>
+
+            <ul class="platform__list site-list">
+              <li class="platform__item">
+                <input class="platform__input visually-hidden" type="radio" id="ios" name="platform" value="ios" checked>
+                <label class="platform__label check-label" for="ios">Pink для iOS</label>
+              </li>
+
+              <li class="platform__item">
+                <input class="platform__input visually-hidden" type="radio" id="android" name="platform" value="android">
+                <label class="platform__label check-label" for="android">Pink на Android</label>
+              </li>
+
+              <li class="platform__item">
+                <input class="platform__input visually-hidden" type="radio" id="windows" name="platform" value="windows-phone">
+                <label class="platform__label check-label" for="windows">Windows Phone</label>
+              </li>
+            </ul>
+
+          </fieldset>
+          </div>
+
+          <div class="form__fieldset-wrapper form__fieldset-wrapper--mobile-light">
+          <fieldset class="form__fieldset form__fieldset--mobile story check-fields">
+            <div class="story__item story__item--mobile">
+              <label class="story__label form-legend" for="emotions">ОПИШИТЕ СВОИ ЭМОЦИИ</label>
+              <textarea class="story__input form-input" id="emotions" name="emotional-story" rows="12" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
             </div>
           </fieldset>
+          </div>
 
-          <div class="request__submit-wrapper">
-            <button class="request__button button" type="submit">Отправить форму</button>
-            <p class="request__note"><span>*</span>— обязательные поля</p>
+          <div class="form__fieldset-wrapper form__fieldset-wrapper--mobile-light submit-wrapper submit-wrapper--mobile">
+            <button class="form__button form-button form-button--mobile submit-button" type="submit">Отправить форму</button>
+            <p class="form__note form__note--mobile"><span class="form__asterisk">*</span>— обязательные поля</p>
           </div>
 
         </form>
@@ -195,7 +205,7 @@
 
         <div class="page-footer__social social">
 
-          <ul class="social__list">
+          <ul class="social__list site-list">
             <li class="social__item">
               <a class="social__link button button--social" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Мы ВКонтакте</span>
@@ -244,25 +254,25 @@
 
     </footer>
 
-    <div class="modal modal--fault">
+    <div class="modal modal--mobile modal--fault">
 
-      <p class="modal__title">Что-то пошло не так!</p>
-      <p class="modal__description">Проверьте поля, выделенные красным,
+      <p class="modal__title modal__title--mobile">Что-то пошло не так!</p>
+      <p class="modal__description modal__description--mobile">Проверьте поля, выделенные красным,
         скорее всего вы забыли их заполнить</p>
 
       <div class="modal__wrapper button-wrapper button-wrapper--fault">
-        <button class="modal__button" type="button">ОК</button>
+        <button class="modal__button form-button form-button--mobile submit-button" type="button">ОК</button>
       </div>
 
     </div>
 
-    <div class="modal modal--accept">
+    <div class="modal modal--mobile modal--accept">
 
-      <p class="modal__title">Ваша заявка отправлена</p>
-      <p class="modal__description">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+      <p class="modal__title modal__title--mobile">Ваша заявка отправлена</p>
+      <p class="modal__description modal__description--mobile">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
 
       <div class="modal__wrapper button-wrapper button-wrapper--accept">
-        <button class="modal__button" type="button">ЗАКРЫТЬ ОКНО</button>
+        <button class="modal__button form-button form-button--mobile submit-button" type="button">ЗАКРЫТЬ ОКНО</button>
       </div>
 
     </div>
