--- a/source/index.html
+++ b/source/index.html
@@ -63,7 +63,7 @@
         <div class="apps__content">
           <a class="apps__button button button--download" href="https://www.apple.com/ru/app-store/">Скачать приложение</a>
 
-          <ul class="apps__list">
+          <ul class="apps__list site-list">
 
             <li class="apps__item">
               <a class="apps__link" href="https://www.apple.com/ru/app-store/">
@@ -116,7 +116,7 @@
         <h2 class="visually-hidden">Преимущества мобильного приложения Pink</h2>
 
         <div class="benefits__wrapper benefits__wrapper--mobile">
-          <ul class="benefits__list">
+          <ul class="benefits__list site-list">
 
             <li class="benefits__item benefits__item--mobile">
               <h3 class="benefits__title benefits__title--mobile">Поднимает настроение</h3>
@@ -371,7 +371,7 @@
 
         <div class="page-footer__social social">
 
-          <ul class="social__list">
+          <ul class="social__list site-list">
             <li class="social__item">
               <a class="social__link button button--social" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Мы ВКонтакте</span>
