--- a/source/form.html
+++ b/source/form.html
@@ -254,13 +254,14 @@
 
     </footer>
 
-    <div class="modal modal--mobile modal--fault">
+    <div class="modal modal--mobile-fault modal--mobile-accept">
 
+      <div class="modal__content-wrapper modal__content-wrapper--mobile-fault">
       <p class="modal__title modal__title--mobile">Что-то пошло не так!</p>
-      <p class="modal__description modal__description--mobile">Проверьте поля, выделенные красным,
-        скорее всего вы забыли их заполнить</p>
+      <p class="modal__description modal__description--mobile">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      </div>
 
-      <div class="modal__wrapper button-wrapper button-wrapper--fault">
+      <div class="modal__button-wrapper modal__button-wrapper--mobile-fault">
         <button class="modal__button form-button form-button--mobile submit-button" type="button">ОК</button>
       </div>
 
@@ -268,10 +269,12 @@
 
     <div class="modal modal--mobile modal--accept">
 
+      <div class="modal__content-wrapper modal__content-wrapper--mobile-accept">
       <p class="modal__title modal__title--mobile">Ваша заявка отправлена</p>
-      <p class="modal__description modal__description--mobile">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+      <p class="modal__description modal__description--mobile">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим&nbspвас.</p>
+      </div>
 
-      <div class="modal__wrapper button-wrapper button-wrapper--accept">
+      <div class="modal__button-wrapper modal__button-wrapper--mobile-accept">
         <button class="modal__button form-button form-button--mobile submit-button" type="button">ЗАКРЫТЬ ОКНО</button>
       </div>
 
