--- a/source/form.html
+++ b/source/form.html
@@ -15,7 +15,7 @@
 
         <a class="page-header__logo logo-link" href="#">
           <span class="visually-hidden">Логотип мобильного приложения Pink</span>
-          <svg class="logo-link__logo"width="74" height="23" viewBox="0 0 74 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg class="logo-link__logo" width="74" height="23" viewBox="0 0 74 23" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M0 1.5A1.3 1.3 0 0 1 1.3.3h7c5.1 0 8.5 2.7 8.5 7v.2c0 4.8-4 7.3-8.8 7.3H2.5v6.8A1.3 1.3 0 0 1 1.3 23 1.3 1.3 0 0 1 0 21.6v-20Zm8 11c3.8 0 6.2-2 6.2-5 0-3.2-2.4-4.9-6-4.9H2.7v9.9H8ZM21.6 1.4A1.3 1.3 0 0 1 22.9 0 1.3 1.3 0 0 1 24 1.4v20.2A1.3 1.3 0 0 1 23 23a1.3 1.3 0 0 1-1.3-1.4V1.4ZM30.7 1.4A1.3 1.3 0 0 1 31.9.2h.4a1.5 1.5 0 0 1 1.3.7l13.6 17.4v-17A1.2 1.2 0 0 1 48.4.2a1.2 1.2 0 0 1 1.2 1.3v20.3a1.1 1.1 0 0 1-1.1 1.1h-.2A1.7 1.7 0 0 1 47 22L33.1 4.2v17.5a1.3 1.3 0 0 1-1.2 1.2 1.2 1.2 0 0 1-1.2-1.2V1.4ZM56 1.4A1.3 1.3 0 0 1 57.1 0a1.3 1.3 0 0 1 1.3 1.4v12.3L71.2.6c.3-.3.6-.5 1-.5a1.3 1.3 0 0 1 1.2 1.3 1.3 1.3 0 0 1-.4.9l-8 7.9 8.7 10.5c.2.2.3.6.3 1a1.3 1.3 0 0 1-1.3 1.2 1.2 1.2 0 0 1-1-.6L63.3 12l-4.8 4.8v4.9a1.3 1.3 0 0 1-1.3 1.3 1.3 1.3 0 0 1-1.3-1.3V1.4Z" fill="##fff"/>
           </svg>
         </a>
@@ -60,7 +60,7 @@
 
       <div class="form">
 
-        <div class="form__description-wrapper form__description-wrapper--mobile content-wrapper">
+        <div class="form__description-wrapper form__description-wrapper--mobile content-wrapper content-wrapper--mobile">
           <p class="form__description form__description--mobile">Поделитесь своей историей и получите
           шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
         </div>
@@ -271,7 +271,7 @@
 
       <div class="modal__content-wrapper modal__content-wrapper--mobile-accept">
       <p class="modal__title modal__title--mobile">Ваша заявка отправлена</p>
-      <p class="modal__description modal__description--mobile">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим&nbspвас.</p>
+      <p class="modal__description modal__description--mobile">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим&nbsp;вас.</p>
       </div>
 
       <div class="modal__button-wrapper modal__button-wrapper--mobile-accept">
